[gd_scene load_steps=3 format=3 uid="uid://bge7w16mcqrkq"]

[ext_resource type="Script" path="res://TCP_server_project/wrappers/server_client_wrapper.gd" id="1_a42xk"]
[ext_resource type="PackedScene" uid="uid://bsp4cm2qvhap7" path="res://TCP_server_project/server/server_client_node.tscn" id="2_rffwp"]

[node name="ServerClientWrapper" type="Node"]
script = ExtResource("1_a42xk")

[node name="ServerClientNode" parent="." instance=ExtResource("2_rffwp")]

[connection signal="disconnected" from="ServerClientNode" to="." method="_on_server_client_node_disconnected"]
[connection signal="payload_received" from="ServerClientNode" to="." method="_on_server_client_node_payload_received"]
